# stackSquing

./: .gitignore  CMakeLists.txt  README.md  build.sh
examples/: sample_material_list.txt
src/: app.cpp  app.hpp  display_order.cpp  display_order.hpp  format.cpp  format.hpp  groups.cpp  groups.hpp  main.cpp  model.hpp  parser.cpp  parser.hpp  ui.cpp  ui.hpp
